fixtures/errors/circular_a.hu
@use * from "circular_b.hu"

tagaxis dummy_a {
  role: classificatory
  display: { en: "Dummy A" }
}
